fix(theme): fix img icon align

--- a/packages/theme/src/client/styles/page-nav.scss
+++ b/packages/theme/src/client/styles/page-nav.scss
@@ -55,7 +55,7 @@
     }
 
     img.icon {
-      vertical-align: text-bottom;
+      vertical-align: -0.125em;
       height: 1em;
     }
   }
@@ -69,7 +69,7 @@
     }
 
     img.icon {
-      vertical-align: text-bottom;
+      vertical-align: -0.125em;
       height: 1em;
     }
   }
